# LMAO

./: CMakeLists.txt  README.md  dev.elek.LMAO.metainfo.xml  lmao  lmao.spec
.github/workflows/: build.yml
src/: mpvcontroller.cpp  mpvcontroller.h  playerwindow.cpp  theme.h
src/widgets/: glassbutton.h
